feat(codeeditor): add select list items

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,6 +141,7 @@ table {
 	--gray-color: #9c9cab;
 	--purple-color: #bd93f9;
 	--yellow-color: #f1fa8c;
+	--orange-color: #ffb86c;
 	--foreground-color: #f8f8f2;
 
 	/* Font sizes */
