--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -1,4 +1,29 @@
 .codeEditorContainer {
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 1.5625rem);
+	position: relative;
+	margin-bottom: -1.5625rem;
+}
+
+.codeMirrorContainer {
+	margin-top: 0;
+}
+
+.codeMirrorContainer ::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+.codeMirrorContainer ::-webkit-scrollbar-track {
+	background: var(--bg-color);
+}
+
+/* Handle */
+.codeMirrorContainer ::-webkit-scrollbar-thumb {
+	background: var(--bg-color-dark);
+}
+
+/* Handle on hover */
+.codeMirrorContainer ::-webkit-scrollbar-thumb:hover {
+	background: var(--bg-color);
 }
