--- a/app/components/Aside/aside.module.css
+++ b/app/components/Aside/aside.module.css
@@ -5,6 +5,7 @@
 	border-right: 1px solid var(--border-color);
 	height: 100vh;
 	transition: max-width 0.3s;
+	position: relative;
 }
 
 .section {
@@ -18,7 +19,13 @@
 }
 
 .section:last-child {
-	padding: 0.625rem 2.813rem;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding: 0;
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
 }
 
 .title {
@@ -33,7 +40,7 @@
 .settingsItems {
 	color: var(--gray-color);
 	cursor: pointer;
-	margin-bottom: 0.625rem;
+	margin: 0.625rem;
 	display: flex;
 	width: 100%;
 	align-items: center;
@@ -45,6 +52,10 @@
 
 .icon {
 	margin-right: 0.625rem;
+}
+
+.signOutIcon {
+	margin-right: 0.313rem;
 }
 
 @media (width <= 768px) {
