--- a/app/components/ui/Input/input.module.css
+++ b/app/components/ui/Input/input.module.css
@@ -15,12 +15,7 @@
 	padding: 0 0.625rem;
 }
 
-.searchIcon {
-	fill: currentcolor;
-	color: var(--gray-color);
-}
-
-.searchInput {
+.input {
 	z-index: 1;
 	display: block;
 	appearance: none;
@@ -30,10 +25,20 @@
 	border: none;
 	outline: none;
 	width: 100%;
+	height: 1.875rem;
+}
+
+.inputDark {
+	background-color: transparent;
 	color: var(--foreground-color);
 }
 
-.searchInput::placeholder {
+.inputLight {
+	background-color: var(--foreground-color);
+	color: var(--current-line);
+}
+
+.input::placeholder {
 	color: var(--gray-color);
 	opacity: 1; /* Firefox */
 }
