feat(login): add login styles and alerts

--- a/app/components/ui/Select/select.module.css
+++ b/app/components/ui/Select/select.module.css
@@ -43,8 +43,8 @@
 	transition:
 		visibility 0s,
 		height 0.5s ease-in-out;
-	-webkit-user-select: none;
-	-moz-user-select: none;
+	user-select: none;
+	user-select: none;
 	user-select: none;
 }
 
@@ -52,8 +52,8 @@
 	color: var(--gray-color);
 	padding: 0.313rem 0.625rem;
 	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
+	user-select: none;
+	user-select: none;
 	user-select: none;
 }
 
