--- a/app/components/ui/Button/button.module.css
+++ b/app/components/ui/Button/button.module.css
@@ -1,16 +1,26 @@
 .button {
-	background: transparent;
 	border: 1px solid var(--border-color);
 	border-radius: var(--border-radius);
-	color: var(--foreground-color);
 	padding: 10px 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-size: var(--small-font-size);
-	margin: 4px 2px;
 	cursor: pointer;
 	transition: background-color 0.3s;
+	margin: 0.313rem 0.5rem;
+	width: calc(100% - 1rem);
+	height: 2.813rem;
+}
+
+.primary {
+	background: transparent;
+	color: var(--foreground-color);
+}
+
+.secondary {
+	background: var(--bg-color-dark);
+	color: var(--gray-color);
 }
 
 .button:hover {
