--- a/app/components/AuthForm/authform.module.css
+++ b/app/components/AuthForm/authform.module.css
@@ -1,3 +1,10 @@
 .form {
 	width: 70%;
 }
+
+.button {
+	margin: 0.313rem 0.5rem;
+	width: calc(100% - 1rem);
+	padding: 10px 32px;
+	height: 2.813rem;
+}
