--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -27,3 +27,28 @@
 .codeMirrorContainer ::-webkit-scrollbar-thumb:hover {
 	background: var(--bg-color);
 }
+
+.header {
+	display: flex;
+	height: 2.5rem;
+	background: var(--bg-color-dark);
+	align-items: center;
+	padding: 0 0.625rem;
+	border-bottom: 1px solid var(--border-color);
+}
+
+.button {
+	height: 1.563rem;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-items: center;
+	padding: 0.313rem 0.625rem;
+	margin: 0 0 0 0.625rem;
+}
+
+.icon {
+	margin-right: 0.313rem;
+	position: relative;
+	bottom: 1px;
+}
