--- a/app/components/ui/Button/button.module.css
+++ b/app/components/ui/Button/button.module.css
@@ -1,16 +1,11 @@
 .button {
 	border: 1px solid var(--border-color);
 	border-radius: var(--border-radius);
-	padding: 10px 32px;
 	text-align: center;
 	text-decoration: none;
-	display: inline-block;
 	font-size: var(--small-font-size);
 	cursor: pointer;
 	transition: background-color 0.3s;
-	margin: 0.313rem 0.5rem;
-	width: calc(100% - 1rem);
-	height: 2.813rem;
 }
 
 .primary {
@@ -19,7 +14,7 @@
 }
 
 .secondary {
-	background: var(--bg-color-dark);
+	background: var(--current-line);
 	color: var(--gray-color);
 }
 
