feat(snippets): add trash logic

--- a/app/components/Aside/aside.module.css
+++ b/app/components/Aside/aside.module.css
@@ -9,13 +9,13 @@
 }
 
 .section {
-	padding: 0.938rem;
+	padding: 0.625rem 0.938rem;
 	display: flex;
 	flex-direction: column;
 }
 
 .section:first-child {
-	padding: 1.875rem 0.938rem 0.938rem;
+	padding: 1.875rem 0 0.938rem;
 }
 
 .section:last-child {
@@ -35,6 +35,19 @@
 	align-items: center;
 	width: 100%;
 	margin-bottom: 0.313rem;
+}
+
+.linkItem {
+	display: flex;
+	align-items: center;
+	padding: 0.313rem 0.938rem;
+	cursor: pointer;
+	font-size: var(--small-font-size);
+}
+
+.linkItemActive {
+	background: var(--current-line);
+	color: var(--foreground-color);
 }
 
 .settingsItems {
