feat(snippets): add snippets disable on delete and analytics

--- a/app/components/SnippetList/snippetlist.module.css
+++ b/app/components/SnippetList/snippetlist.module.css
@@ -16,7 +16,7 @@
 .addButton {
 	margin: 0 0.625rem 0 0;
 	cursor: pointer;
-	color: var(--foreground-color);
+	color: var(--gray-color);
 	transition: all 0.25s ease;
 }
 
