feat(snippets): add trash-icon (#1)
* feat(snippets): add trash-icon

* fix(fixtures): update example fixture

* feat(snippets): add trash logic

* style(codeeditor): linter styles

* style(codeeditor): remove duplicated linter

* feat(snippets): add snippets disable on delete and analytics

--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -5,6 +5,19 @@
 	margin-bottom: -1.5625rem;
 }
 
+.noSnippetContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--gray-color);
+	opacity: 0.4;
+	user-select: none;
+}
+
+.noSnippet {
+	font-size: var(--small-font-size);
+}
+
 .codeMirrorContainer {
 	margin-top: 0;
 }
@@ -25,7 +38,7 @@
 
 /* Handle on hover */
 .codeMirrorContainer ::-webkit-scrollbar-thumb:hover {
-	background: var(--bg-color);
+	background: var(--bg-color-dark);
 }
 
 .header {
