--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -1,5 +1,5 @@
 .codeEditorContainer {
-	width: 100%;
+	width: calc(100% - 39.375rem);
 	height: calc(100vh - 1.5625rem);
 	position: relative;
 	margin-bottom: -1.5625rem;
@@ -56,7 +56,12 @@
 	display: flex;
 	max-width: 16.25rem;
 	width: 100%;
-	margin-left: 0.625rem;
+	align-items: center;
+}
+
+.starIcon {
+	margin-right: 0.313rem;
+	cursor: pointer;
 }
 
 .headerRightSide {
@@ -80,4 +85,16 @@
 	margin-right: 0.313rem;
 	position: relative;
 	bottom: 1px;
+}
+
+@media (width < 1140px) {
+	.codeEditorContainer {
+		width: calc(100% - 23.813rem);
+	}
+}
+
+@media (width < 780px) {
+	.codeEditorContainer {
+		width: calc(100% - 16rem);
+	}
 }
