--- a/app/snippets/snippets.module.css
+++ b/app/snippets/snippets.module.css
@@ -3,17 +3,5 @@
 	flex-flow: row nowrap;
 	height: 100%;
 	min-height: 35rem;
-}
-
-.mainContent {
-	flex: 1;
-	display: flex;
-	flex-flow: row nowrap;
-}
-
-@media (width < 768px) {
-	.mainContent {
-		flex-flow: column nowrap;
-		width: calc(100% - 32rem);
-	}
+	overflow: hidden;
 }
