--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -89,12 +89,7 @@
 
 @media (width < 1140px) {
 	.codeEditorContainer {
-		width: calc(100% - 23.813rem);
-	}
-}
-
-@media (width < 780px) {
-	.codeEditorContainer {
-		width: calc(100% - 16rem);
+		height: calc(100vh - 3.2rem);
+		width: 100%;
 	}
 }
