feat(snippets): load tags from supabase

--- a/app/components/SnippetList/snippetlist.module.css
+++ b/app/components/SnippetList/snippetlist.module.css
@@ -119,6 +119,7 @@
 
 @media (width < 1140px) {
 	.snippetsListContainer {
+		height: calc(100vh - 3.2rem);
 		position: absolute;
 		top: 0;
 		left: 0;
