revert(main): revert mobile menu position absolute

--- a/app/components/Aside/aside.module.css
+++ b/app/components/Aside/aside.module.css
@@ -92,7 +92,7 @@
 @media (width < 1140px) {
 	.mobileMenuContainer {
 		width: 100%;
-		position: absolute;
+		position: fixed;
 		display: flex;
 		bottom: 0;
 		z-index: 5;
