feat(root): add snippet list menu mobile (#5)
* feat(root): add snippet list menu mobile

* refactor(snippets): refactor isMobile onto a lib

* feat(utils): add useCloseOutsideCodeEditor to close asides in mobile

* feat(snippets): load tags from supabase

* refactor(main): fix style heigh

* style(main): update height styles

* revert(main): revert mobile menu position absolute

--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -89,12 +89,6 @@
 
 @media (width < 1140px) {
 	.codeEditorContainer {
-		width: calc(100% - 23.813rem);
-	}
-}
-
-@media (width < 780px) {
-	.codeEditorContainer {
-		width: calc(100% - 16rem);
+		width: 100%;
 	}
 }
