--- a/app/components/ui/Input/input.module.css
+++ b/app/components/ui/Input/input.module.css
@@ -4,11 +4,18 @@
 	width: calc(100% - 1.25rem);
 	box-sizing: border-box;
 	position: relative;
-	margin: 0.625rem;
+	margin: 0.5rem 0.625rem;
 	border-radius: var(--border-radius);
 	border: 0.063rem solid var(--border-color);
-	padding: 0.313rem 0.625rem;
 	align-items: center;
+}
+
+.isFat {
+	padding: 0.625rem;
+}
+
+.isFit {
+	padding: 0 0.625rem;
 }
 
 .iconContainer {
