--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -43,7 +43,7 @@
 
 .header {
 	display: flex;
-	height: 4rem;
+	height: 3.2rem;
 	background: var(--bg-color-dark);
 	align-items: center;
 	padding: 0 0.625rem;
@@ -85,6 +85,21 @@
 	margin-right: 0.313rem;
 	position: relative;
 	bottom: 1px;
+}
+
+.tagsContainer {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	width: calc(100% - 0.624rem);
+	background: var(--bg-color-dark);
+	height: 3.2rem;
+	border-bottom: 1px solid var(--border-color);
+	padding: 0 0 0 0.624rem;
+}
+
+.tagInput {
+	width: 14.75rem;
 }
 
 @media (width < 1140px) {
