feat(snippets): remove tag from snippet

--- a/app/components/ui/Badge/badge.module.css
+++ b/app/components/ui/Badge/badge.module.css
@@ -9,3 +9,8 @@
 	background: var(--current-line);
 	border-radius: var(--border-radius);
 }
+
+.removeBadge {
+	margin-right: 0.313rem;
+	cursor: pointer;
+}
