--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,49 +6,6 @@
 	height: 100vh;
 }
 
-.button {
-	padding: 0.313rem 1.25rem;
-	margin: 0 0.625rem;
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-}
-
-.signInIcon {
-	margin-right: 0.313rem;
-}
-
-.header {
-	width: 100%;
-	display: flex;
-	height: 3.5rem;
-	background-color: var(--current-line);
-	border-bottom: 1px solid var(--border-color);
-	box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 30%);
-	padding: 0.313rem 0;
-	align-items: center;
-	justify-content: center;
-	z-index: 2;
-}
-
-.headerContainer {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.logo {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	width: 100%;
-	max-width: 15rem;
-}
-
-.logoImage {
-	margin-right: 0.625rem;
-}
-
 .topSection {
 	height: auto;
 	width: 100%;
@@ -56,7 +13,7 @@
 	justify-content: center;
 	align-items: center;
 	z-index: 0;
-	padding: 7rem 0;
+	padding: 5rem 0;
 }
 
 .top {
@@ -93,19 +50,26 @@
 	font-size: var(--small-font-size);
 	line-height: 1.5;
 	max-width: 71.25rem;
-	margin-top: 2.4rem;
+	margin-top: 1.4rem;
 }
 
-.copyRight {
-	font-size: var(--tiny-font-size);
-	color: var(--gray-color);
-	margin-top: 7rem;
-	text-align: center;
-	display: flex;
-	justify-content: center;
+.email {
+	color: var(--cyan-color);
+}
+
+.terms {
+	color: var(--green-color);
 }
 
 @media (width <= 768px) {
+	.title {
+		font-size: var(--normal-font-size);
+	}
+
+	.description {
+		font-size: var(--small-font-size);
+	}
+
 	.topSection {
 		padding: 2.4rem 0;
 	}
