feat(editor): button changes the color on touch

--- a/app/components/CodeEditor/codeEditor.module.css
+++ b/app/components/CodeEditor/codeEditor.module.css
@@ -102,6 +102,11 @@
 	width: 14.75rem;
 }
 
+.touched {
+	background: var(--green-color);
+	color: var(--bg-color-dark);
+}
+
 @media (width < 1140px) {
 	.codeEditorContainer {
 		width: 100%;
