feat(snippets): add toasty message to save state

--- a/app/components/ui/Toasty/toasty.module.css
+++ b/app/components/ui/Toasty/toasty.module.css
@@ -11,7 +11,7 @@
 	min-height: 65px;
 	display: flex;
 	flex-flow: column nowrap;
-	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
+	box-shadow: 0 0 5px 0 rgb(0 0 0 / 25%);
 	background-size: 24px 24px;
 	background-position: 15px center;
 	background-repeat: no-repeat;
