--- a/app/components/Aside/aside.module.css
+++ b/app/components/Aside/aside.module.css
@@ -5,6 +5,26 @@
 	border-right: 1px solid var(--border-color);
 	height: 100vh;
 	position: relative;
+	overflow: hidden auto;
+}
+
+.container::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+.container::-webkit-scrollbar-track {
+	background: var(--bg-color);
+}
+
+/* Handle */
+.container::-webkit-scrollbar-thumb {
+	background: var(--current-line);
+}
+
+/* Handle on hover */
+.container::-webkit-scrollbar-thumb:hover {
+	background: var(--current-line);
 }
 
 .section {
@@ -24,6 +44,24 @@
 	align-items: center;
 	width: 100%;
 	margin-bottom: 0.313rem;
+}
+
+.titleClickable {
+	cursor: pointer;
+	transition: color 0.2s ease;
+}
+
+.caretIcon {
+	margin-left: auto;
+	transition: transform 0.2s ease;
+}
+
+.caretExpanded {
+	transform: rotate(180deg);
+}
+
+.caretCollapsed {
+	transform: rotate(0deg);
 }
 
 .linkItem {
