--- a/app/components/ResizableLayout/resizableLayout.module.css
+++ b/app/components/ResizableLayout/resizableLayout.module.css
@@ -19,7 +19,7 @@
 }
 
 .panel {
-  width: 100vw;
+	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
 	position: relative;
@@ -53,7 +53,7 @@
 	transform: translate(-50%, -50%);
 	width: 2px;
 	height: 20px;
-	background: currentColor;
+	background: currentcolor;
 	opacity: 0.5;
 }
 
@@ -62,7 +62,7 @@
 	.resizer {
 		display: none;
 	}
-	
+
 	.container .panel {
 		width: auto !important;
 		flex: unset !important;
