--- a/app/components/ui/Input/input.module.css
+++ b/app/components/ui/Input/input.module.css
@@ -33,6 +33,9 @@
 	outline: none;
 	width: 100%;
 	height: 1.875rem;
+	font-size: var(--normal-font-size);
+	touch-action: manipulation;
+	
 }
 
 .inputDark {
@@ -48,4 +51,5 @@
 .input::placeholder {
 	color: var(--gray-color);
 	opacity: 1; /* Firefox */
+	font-size: var(--tiny-font-size);
 }
